# brutal-chess

./: .gitignore  AUTHORS  ChangeLog  Doxyfile  INSTALL  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  autogen.sh  brutalchess.nsi  brutalchess.sln  brutalchess.vcproj  config.h.in  configure  configure.ac  resource.h
.github/workflows/: c-cpp.yml
art/: Makefile.am  Makefile.in
fonts/: !pizzadude.txt  Makefile.am  Makefile.in
models/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  basicset.cpp  bitboard.cpp  bitboard.h  board.cpp  board.h  boardmove.cpp  boardmove.h  boardposition.cpp  boardposition.h  boardtheme.cpp  boardtheme.h  boardthemes.h  brutalchess.cpp  brutalplayer.cpp  chessgame.cpp  chessgame.h  chessgamestate.cpp  chessgamestate.h  chessplayer.cpp  chessplayer.h  chessplayers.h  config.h  debugset.cpp  exception.h  faileplayer.cpp  fontloader.cpp  fontloader.h  gamecore.cpp  gamecore.h  granitetheme.cpp  humanplayer.cpp  md3model.cpp  md3model.h  md3test.cpp  md3view.cpp  md3view.cpp.orig  md3view.cpp.rej  menu.cpp  (+31 more)
